Correct setup of GitHub actions wrt Gradle

--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ test {
 // Change here
 application
         {
-            mainClassName = 'Cipolla'
+            mainClassName = 'MyScene'
         }
 
 
