--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'application'
-
+    id 'org.openjfx.javafxplugin' version '0.0.9'
 }
 
 group 'org.example'
@@ -14,21 +14,29 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testImplementation(platform('org.junit:junit-bom:5.6.2'))
     testImplementation('org.junit.jupiter:junit-jupiter')
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 
 }
 
 test {
     useJUnitPlatform()
 }
+javafx {
+    version = "15.0.1"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
 
 // Change here
 application
         {
-            mainClassName = 'MyScene'
+            mainClassName = 'App'
         }
 
 
-
+test {
+    useJUnitPlatform()
+}
 
 
 
