--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,8 +19,7 @@ jobs:
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
-        java-version: '9.0.4'
-        architecture: x64
+        java-version: 1.8
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
