--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.9'
+    id 'java'
 }
 
-group 'org.example'
+group 'org.shooter_developers'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -15,27 +16,23 @@ dependencies {
     testImplementation(platform('org.junit:junit-bom:5.6.2'))
     testImplementation('org.junit.jupiter:junit-jupiter')
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-
 }
 
-test {
-    useJUnitPlatform()
-}
 javafx {
     version = "15.0.1"
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
-
-// Change here
-application
-        {
-            mainClassName = 'App'
-        }
-
+mainClassName = 'units.shooter_developers.Main'
 
 test {
     useJUnitPlatform()
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'units.shooter_developers.Main'
+    }
 }
 
 
