--- a/build.gradle
+++ b/build.gradle
@@ -8,21 +8,14 @@ group 'org.shooter_developers'
 version '1.0-SNAPSHOT'
 
 repositories {
-    jcenter()
     mavenCentral()
 }
 
 dependencies {
-    testCompile "org.testfx:testfx-core:4.0.16-alpha"
-    testCompile "junit:junit:4.13-beta-3"
-    testCompile "org.testfx:testfx-junit:4.0.16-alpha"
-
-
-
-
-
-    testCompile "org.testfx:testfx-core:4.0.+"
-    testCompile "org.testfx:testfx-junit:4.0.+"
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation(platform('org.junit:junit-bom:5.6.2'))
+    testImplementation('org.junit.jupiter:junit-jupiter')
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
 javafx {
