--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,7 +20,11 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 15.0.1
-    - name: Grant execute permission for gradlew
+    - name: Grant execute permission for gradlew and install openjfx
       run: chmod +x gradlew
+           sudo apt update
+           sudo apt install openjfx
+           export DISPLAY=:99.0
     - name: Build with Gradle
-      run: ./gradlew build
+      run:
+        ./gradlew build
