--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,16 +21,12 @@ jobs:
       with:
         java-version: 15.0.1
     - name: Grant execute permission for gradlew and install openjfx
-    - run:  chmod +x gradlew;
-
+      run:  chmod +x gradlew
     - name: Update system
-     - run: sudo apt update;
-
+      run: sudo apt update
     - name: Install openjfk
-    - run:  sudo apt install openjfx;
-
+      run:  sudo apt install openjfx
     - name: Export variable
-    - run:  export DISPLAY=:99.0;
-
+      run:  export DISPLAY=:99.0
     - name: Build with Gradle
       run: ./gradlew build
