--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,6 +24,10 @@ jobs:
       run:  chmod +x gradlew
     - name: Install xvfb
       run: sudo apt-get install xvfb
+    - name: Install npm
+      run: sudo apt-get install npm
+    - name: Test npm
+      run:  xvfb-run --auto-servernum npm test
     - name: Update system
       run: sudo apt update
     - name: Install openjfk
