--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,6 +9,7 @@ on:
   pull_request:
     branches: [ main ]
 
+
 jobs:
   build:
 
@@ -29,15 +30,17 @@ jobs:
       run: sudo apt-get install xvfb
     - name: Install npm
       run: npm install
-    - name: Run headless test
-      uses: GabrielBB/xvfb-action@v1
-      with:
-        run: npm test
-    - name: Update system
-      run: sudo apt update
     - name: Install openjfk
       run:  sudo apt install openjfx
     - name: Export variable
       run:  export DISPLAY=:99.0
+
+    - name: Before
+      run: |
+           - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+           - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+           - rm -f  $HOME/.gradle/caches/*/fileHashes/fileHashes.bin
+           - rm -f  $HOME/.gradle/caches/*/fileHashes/fileHashes.lock
+
     - name: Build with Gradle
       run: ./gradlew build
