--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,7 +12,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -21,19 +20,17 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 15.0.1
-    - uses: actions/setup-node@v1
-      with:
-        node-version: 14
     - name: Grant execute permission for gradlew and install openjfx
       run:  chmod +x gradlew
     - name: Install xvfb
       run: sudo apt-get install xvfb
-    - name: Install npm
-      run: npm install
     - name: Install openjfk
       run:  sudo apt install openjfx
     - name: Export variable
       run:  export DISPLAY=:99.0
+    - name: xvfb comandi
+      run: |
+           Xvfb :99 &>/dev/null &
 
     - name: Before
       run: |
@@ -43,4 +40,4 @@ jobs:
            - rm -f  $HOME/.gradle/caches/*/fileHashes/fileHashes.lock
 
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew check
