--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,6 +14,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+
     steps:
     - uses: actions/checkout@v2
     - name: Set the correct JDK(15.0.1)
@@ -28,8 +29,7 @@ jobs:
       run:  sudo apt install openjfx
     - name: Export variable
       run:  export DISPLAY=:99.0
-
-
-
+    - name: Export Java Options
+      run:  _JAVA_OPTIONS="-Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true -Dprism.order=sw"
     - name: Build with Gradle
       run: ./gradlew check
