--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,22 +14,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-
     steps:
     - uses: actions/checkout@v2
     - name: Set the correct JDK(15.0.1)
       uses: actions/setup-java@v1
       with:
         java-version: 15.0.1
-    - name: Grant execute permission for gradlew and install openjfx
+    - name: Grant execute permission for gradlew
       run:  chmod +x gradlew
-    - name: Install xvfb
-      run: sudo apt-get install xvfb
-    - name: Install openjfk
-      run:  sudo apt install openjfx
-    - name: Export variable
-      run:  export DISPLAY=:99.0
-    - name: Export Java Options
-      run:  export _JAVA_OPTIONS="-Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true -Dprism.order=sw"
     - name: Build with Gradle
       run: ./gradlew check
