--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     testImplementation(platform('org.junit:junit-bom:5.6.2'))
     testImplementation('org.junit.jupiter:junit-jupiter')
     testCompile "org.testfx:testfx-junit5:4.0.16-alpha"
-    testCompile "org.testfx:openjfx-monocle:8u76-b04" // jdk-9+181 for Java 9, jdk-11+26 for Java 11
+    testCompile "org.testfx:openjfx-monocle:jdk-12.0.1+2" // jdk-9+181 for Java 9, jdk-11+26 for Java 11
 
 }
 
