--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ matrix:
     # macOS / Oracle JDK 8 / Headless
     - os: osx
       osx_image: xcode9.4
-      jdk: openjdk15
+      jdk: openjdk
       env:
         - _JAVA_OPTIONS="-Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true -Dprism.order=sw -Dprism.verbose=true"
     # Headed macOS is not currently possible on Travis.
@@ -41,7 +41,7 @@ before_install:
 install: true
 
 before_script:
-  - if [[ "${TRAVIS_OS_NAME}" == osx ]]; then brew update; brew cask reinstall caskroom/versions/java15; fi
+  - if [[ "${TRAVIS_OS_NAME}" == osx ]]; then brew update;brew cleanup;brew cask cleanup; brew cask reinstall caskroom/versions/java15; fi
 
 script:
   - ./gradlew check
