--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,11 @@ matrix:
       env:
         - _JAVA_OPTIONS="-Dtestfx.robot=awt"
     # Ubuntu Linux (trusty) / Oracle JDK 8 / Headed (Glass Robot) / HiDPI
-    - os: linux
-      dist: trusty
-      jdk: openjdk15
-      env:
-        - _JAVA_OPTIONS="-Dtestfx.robot=glass -Dglass.gtk.uiScale=2.0"
+    #- os: linux
+    #  dist: trusty
+    #  jdk: openjdk15
+    #  env:
+    #    - _JAVA_OPTIONS="-Dtestfx.robot=glass -Dglass.gtk.uiScale=2.0"
     # Ubuntu Linux (trusty) / Oracle JDK 8 / Headless
     - os: linux
       dist: trusty
