--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 15.0.1
-    - name: Set headless config
+    - name: Set headless configuration
       run: export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start; export _JAVA_OPTIONS="-Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true -Dprism.order=sw"
     - name: Grant execute permission for gradlew
       run:  chmod +x gradlew
