--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         java-version: 15.0.1
     - name: Set headless configuration
-      run:  sudo apt install xvfb; export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start; export _JAVA_OPTIONS="-Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true -Dprism.order=sw"
+      run:  sudo apt install xvfb; export DISPLAY=:99.0; xvfb-run; export _JAVA_OPTIONS="-Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true -Dprism.order=sw"
     - name: Grant execute permission for gradlew
       run:  chmod +x gradlew
     - name: Build with Gradle
