--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,4 +25,5 @@ jobs:
     - name: Grant execute permission for gradlew
       run:  chmod +x gradlew
     - name: Build with Gradle
+      uses: GabrielBB/xvfb-action@v1
       run:  ./gradlew check
