--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Grant execute permission for gradlew
       run:  chmod +x gradlew
     - name: Build with Gradle
-      run:  ./gradlew check
+      run: sudo apt-get install -y xvfb libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xinput0 libxcb-xfixes0;sudo /usr/bin/Xvfb $DISPLAY -screen 0 1280x1024x24 &;./gradlew check
